v 1.4.4.1 - Fixed background scroll on mobile devices (thanks FreakyFP!)

--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,6 @@ body {
 /* FOOTER */
 /* ****** */
 
-html {
-    height: 100%
-}
-
 body {
     position: relative;
     margin: 0;
